- refactor code to resolve resource directories to Utilities.resourceDirs - add J's bin directory to the $PATH env var before exec, if possible, to find jpty in OSX mac .app archive - add Utilities.which() to find a binary on the $PATH - remember the resolved path to jpty